tdf#107837 DOCX export: fix balanced multi-col section at doc end

For one, commit f6eb92406bd366c557bc07810649e7ab3d1db614 (fdo#77812
:FILESAVE :DOCX : Extra Section Break gets added in file, 2014-04-29)
made the mistake of always preventing an empty section at the end of the
document, while having that is a feature for the case of balanced Writer
sections with multiple columns. Word can't have balanced columns at the
end of the document otherwise.

For another, commit b6e62dc0dc2b284c825f1182a67bb2f9259a30ce (tdf#106492
DOCX export: fix duplicated section break at doc end, 2017-03-21) made
the same mistake when it wanted to eliminate an unexpected additional
section break.

Fix these by restricting these changes to the case when we don't hit the
"multiple columns + they are balanced" situation.

Change-Id: I742097eb813da6d94a9669328c6a049da7a491ee
Reviewed-on: https://gerrit.libreoffice.org/38104
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 2d13a00bfa17dd610979b5d89b4f159f2e548d3d)
Reviewed-on: https://gerrit.libreoffice.org/38265